--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-python-telegram-bot[webhooks]
+
 Pillow==8.0.0
 apscheduler==3.8.1
- python-dotenv
+python-dotenv
  
+
+python-telegram-bot[webhooks]
+python==3.10
